Fix text overflow wrapping in content

--- a/src/scss/cs/button.scss
+++ b/src/scss/cs/button.scss
@@ -337,7 +337,7 @@ a:not(.btn):not(.nav-link) {
       @extend .btn-link;
     }
   }
-  overflow-wrap: anywhere;
+  word-wrap: break-word;
   text-decoration: underline;
   &:focus {
     border: none;
